ChangeLog for Nicotine Plus

Unreleased 1.2.5pre
 * Shortened Search tab length and added a label containing the full query 
   next to the "Enable filters" checkbox.
 * Added confirmation exit popup dialog when quiting with the window manager.
 * Replaced "pure text" percent column with a CellRendererProgress column
 * Added support for sending and recieving Soulseek peer message 52, Upload
   Queue Notification, which allows users to notify upload recipients that 
   they are attempting to send a file. Also, a log message is printed when a 
   user attempts to send you file(s) and an automatic is sent if they aren't 
   allowed to.
 * Added option to Transfer Settings to show/hide the transfer buttons.
 * Added expander to glade2py, so it can now be used.
 * Rearranged the new user entry/buttons to the top left of their tabs, added 
   spacing inside tabs.
 * Added more stock gtk icons to Settings and Userinfo, among other places.
 * Fixed the Chatrooms tab hilite bug (reported by Offhand, xrc)
 * Made the main window's minimum size to be 500x500 px
 * Modified CheckVersion function to allow for milli ( X.X.X.X  ) versioning.
 * Add a Bool to the GetUserStatus message received from the server, for privs.
   If 1, add user to list of privileged users.
 * Added SendUploadSpeed (121) message which replaced SendSpeed (34) a long 
   time ago. Thanks to sierracat for the info, and to slack---line for testing.
   
Version 1.2.4.1 August 18th 2006
Bugfix Release
 * Disabled use of 'pwd' module on windows
 * Fixed bug with Buddylist tab not appearing on startup.
 * Fixed bug with double-clicking on a user in the Buddy not switching to the 
   correct private chat tab.
   

Version 1.2.4 August 17th 2006
 * Added new translations for Hungarian (djbaloo) and Slovak (Josef Riha)
 * Made Buddylist toggleable between it's own tab and pane on the right side
   of chatrooms
 * Rearranged tabs to the top of the window